--- a/ContrastEnhancementTrails/OTSUBinarization_Contouring/OTSUBINARIZATION_COUNTOURING.ipynb
+++ b/ContrastEnhancementTrails/OTSUBinarization_Contouring/OTSUBINARIZATION_COUNTOURING.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import skimage.io as io\n",
     "import numpy as np\n",
+    "import scipy\n",
     "from skimage.morphology import binary_erosion, binary_dilation, binary_closing,skeletonize, thin\n",
     "from commonfunctions import *\n",
     "from pip._internal import main as install"
@@ -24,18 +25,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
    "source": [
-    "img= cv2.imread(\"note.png\") \n",
+    "img= cv2.imread(\"note1.png\") \n",
     "cv2.imshow(\"Images\",img) \n",
     "cv2.waitKey(0) \n",
     "cv2.destroyAllWindows() \n",
     "countourImg=np.copy(img)\n",
+    "def signaltonoise(a, axis=None, ddof=0):\n",
+    "    a = np.asanyarray(a)\n",
+    "    m = a.mean(axis)\n",
+    "    sd = a.std(axis=axis, ddof=0)\n",
+    "    return np.where(sd == 0, 0, m/sd)\n",
+    "\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
+    "snr = signaltonoise(gray_img)\n",
+    "if(snr<1):\n",
+    "    snr=1\n",
+    "if(snr>5):\n",
+    "    snr=5\n",
+    "sigma=(-50/4)*(snr-1)+60\n",
+    "print(sigma)\n",
     "#We May Calc NSR first before smoothing to avoid edge blurring in good quality images\n",
-    "smoothedImage=cv2.bilateralFilter(gray_img,8,10,10)\n",
+    "smoothedImage=cv2.bilateralFilter(gray_img,8,int(sigma),int(sigma))\n",
     "cv2.imshow(\"Images\",smoothedImage) \n",
     "cv2.waitKey(0) \n",
     "cv2.destroyAllWindows() \n"
@@ -43,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +148,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +173,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
