Edit Directory of images

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,6 @@
     "from skimage.filters import sobel_h, sobel, sobel_v, roberts, prewitt\n",
     "from commonfunctions import *\n",
     "from pip._internal import main as install\n",
-    "import mahotas\n",
-    "import mahotas.demos\n",
     "from pylab import imshow, gray, show \n",
     "import cv2\n",
     "from math import pi\n",
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img= cv2.imread(\"note1.png\") \n",
+    "img= cv2.imread(\"imgs/unnamed1.jpg\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "smoothedImage=smooth(gray_img)\n",
