Add Skewing to Integrated

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,13 +16,12 @@
     "from pylab import imshow, gray, show \n",
     "import cv2\n",
     "from math import pi\n",
-    "\n",
-    "# Testing all the included thresholding algorithms\n"
+    "from scipy.ndimage import interpolation as inter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +37,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deskew(img):\n",
+    "    initAngle = 45\n",
+    "    angles = np.arange(-initAngle, initAngle + 1, 1)\n",
+    "    scoreArray = np.zeros(92)\n",
+    "    for i in angles:\n",
+    "        data = inter.rotate(img, i, reshape=False, order=0)\n",
+    "        sumRow = np.sum(data, axis=1)\n",
+    "        score = np.sum((sumRow[1:] - sumRow[:-1]) ** 2)\n",
+    "        scoreArray[i+45] = score\n",
+    "\n",
+    "    data = inter.rotate(img, 90, reshape=True, order=0)\n",
+    "    sumRow90 = np.sum(data, axis=1)\n",
+    "    score90 = np.sum((sumRow90[1:] - sumRow90[:-1]) ** 2)\n",
+    "    scoreArray[91] = score90\n",
+    "\n",
+    "    scoreArray = np.array(scoreArray)\n",
+    "    trueAngle = np.where(scoreArray == max(scoreArray))[0][0] - 45\n",
+    "    if(trueAngle == 46):\n",
+    "        rotated = inter.rotate(img, 90, reshape=True, order=0)\n",
+    "    else:\n",
+    "        rotated = inter.rotate(img, trueAngle, reshape=False, order=0)\n",
+    "        print(trueAngle)\n",
+    "    return rotated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,19 +255,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-45\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "img= cv2.imread(\"imgs/unnamed1.jpg\") \n",
+    "img= cv2.imread(\"imgs/lf.jpg\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "smoothedImage=smooth(gray_img)\n",
     "IlluminatedImage=applyPoison(smoothedImage,0.1,0.1)\n",
-    "cv2.imwrite(\"IllumImage.png\",IlluminatedImage)\n",
+    "cv2.imwrite(\"IllumImage.jpg\",IlluminatedImage)\n",
     "showImg(IlluminatedImage/255)\n",
     "BinarizedImage=feng_threshold(IlluminatedImage)\n",
-    "showBinaryImg(BinarizedImage)"
+    "BinarizedImage=1-BinarizedImage\n",
+    "RotatedImage=deskew(BinarizedImage)\n",
+    "BinarizedImage=1-RotatedImage\n",
+    "showBinaryImg(BinarizedImage)\n",
+    "cv2.imwrite(\"Binarized.jpg\",BinarizedImage*255)\n"
    ]
   },
   {
