--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def customErosion(img,ST):\n",
+    "    countOnes= sum(sum(ST))\n",
+    "    imgConvolved = convolve2d(img,ST,mode=\"same\")\n",
+    "    imgEroded = np.where(imgConvolved == countOnes,0,1)\n",
+    "    return imgEroded\n",
+    "\n",
+    "def customDilation(img,ST):\n",
+    "    imgConvolved = convolve2d(img,ST,mode=\"same\")\n",
+    "    imgDilated = np.where(imgConvolved >= 1,0,1)\n",
+    "    return imgDilated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +79,13 @@
     "    if(trueAngle == 46):\n",
     "        rotated = inter.rotate(img, 90, reshape=True, order=0)\n",
     "    else:\n",
-    "        rotated = inter.rotate(img, trueAngle, reshape=False, order=0)\n",
-    "        print(trueAngle)\n",
+    "        rotated = inter.rotate(img, trueAngle, reshape=True, order=0)\n",
     "    return rotated"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,10 +93,6 @@
     "import numpy as np\n",
     "\n",
     "from skimage.util.shape import view_as_windows\n",
-    "\n",
-    "__copyright__ = 'Copyright 2017'\n",
-    "__author__ = u'BSc. Manuel Aguado Martínez'\n",
-    "\n",
     "\n",
     "def feng_threshold(img, w_size1=15, w_size2=30,\n",
     "                   k1=0.15, k2=0.01, alpha1=0.1):\n",
@@ -195,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,46 +268,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-45\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "img= cv2.imread(\"imgs/lf.jpg\") \n",
+    "img= cv2.imread(\"imgs/note1.png\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "smoothedImage=smooth(gray_img)\n",
     "IlluminatedImage=applyPoison(smoothedImage,0.1,0.1)\n",
-    "cv2.imwrite(\"IllumImage.jpg\",IlluminatedImage)\n",
+    "cv2.imwrite(\"IllumImage.png\",IlluminatedImage)\n",
     "showImg(IlluminatedImage/255)\n",
     "BinarizedImage=feng_threshold(IlluminatedImage)\n",
     "BinarizedImage=1-BinarizedImage\n",
     "RotatedImage=deskew(BinarizedImage)\n",
     "BinarizedImage=1-RotatedImage\n",
     "showBinaryImg(BinarizedImage)\n",
-    "cv2.imwrite(\"Binarized.jpg\",BinarizedImage*255)\n"
+    "#cv2.imwrite(\"Binarized.png\",BinarizedImage*255)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +304,31 @@
     "cv2.drawContours(countourImg,countours,-1,(0,255,0))\n",
     "showImg(countourImg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
