Fix Smoothing Bug

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,28 +275,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "img= cv2.imread(\"imgs/note1.png\") \n",
+    "img= cv2.imread(\"imgs/unnamed.jpg\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
-    "smoothedImage=smooth(gray_img)\n",
-    "IlluminatedImage=applyPoison(smoothedImage,0.1,0.1)\n",
+    "IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
+    "IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
+    "smoothedImage=smooth(IlluminatedImage)\n",
     "cv2.imwrite(\"IllumImage.png\",IlluminatedImage)\n",
-    "showImg(IlluminatedImage/255)\n",
-    "BinarizedImage=feng_threshold(IlluminatedImage)\n",
+    "showImg(smoothedImage)\n",
+    "BinarizedImage=feng_threshold(smoothedImage)\n",
     "BinarizedImage=1-BinarizedImage\n",
     "RotatedImage=deskew(BinarizedImage)\n",
     "BinarizedImage=1-RotatedImage\n",
     "showBinaryImg(BinarizedImage)\n",
-    "#cv2.imwrite(\"Binarized.png\",BinarizedImage*255)\n"
+    "cv2.imwrite(\"Binarized.png\",BinarizedImage*255)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,21 +319,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "proj = np.sum(BinarizedImage,1)\n",
+    "m = np.max(proj)\n",
+    "w = 500\n",
+    "result = np.zeros((proj.shape[0],500))\n",
+    "width=BinarizedImage.shape[1]\n",
+    "binOrig=np.copy(BinarizedImage)\n",
+    "# Draw a line for each row\n",
+    "for row in range(BinarizedImage.shape[0]):\n",
+    "    if(proj[row]>.8*m):\n",
+    "        BinarizedImage[row]=1\n",
+    "    cv2.line(result, (0,row), (int(proj[row]*w/m),row), (255,255,255), 1)\n",
+    "binOrig=BinarizedImage-binOrig\n",
+    "binOrig=1-binOrig\n",
+    "# Save result\n",
+    "showBinaryImg(binOrig)\n",
+    "ST=np.ones((3,3))\n",
+    "closed=customErosion(binOrig,ST)\n",
+    "DilImage=customDilation(closed,ST)\n",
+    "DilImage=customDilation(DilImage,ST)\n",
+    "DilImage = DilImage.astype(np.uint8)\n",
+    "showBinaryImg(DilImage)\n",
+    "cv2.imwrite('result.png', result)"
+   ]
   },
   {
    "cell_type": "code",
