Edit staff removal

--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -284,13 +284,13 @@
        "True"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img= cv2.imread(\"imgs/unnamed.jpg\") \n",
+    "img= cv2.imread(\"imgs/note1.png\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,10 +319,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proj = np.sum(BinarizedImage,1)\n",
+    "m = np.max(proj)\n",
+    "w = 500\n",
+    "result = np.zeros((proj.shape[0],500))\n",
+    "width=BinarizedImage.shape[1]\n",
+    "binOrig=np.copy(BinarizedImage)\n",
+    "# Draw a line for each row\n",
+    "for row in range(BinarizedImage.shape[0]):\n",
+    "    if(proj[row]>.8*m):\n",
+    "        BinarizedImage[row]=1\n",
+    "    cv2.line(result, (0,row), (int(proj[row]*w/m),row), (255,255,255), 1)\n",
+    "binOrig=BinarizedImage-binOrig\n",
+    "binOrig=1-binOrig\n",
+    "# Save result\n",
+    "showBinaryImg(binOrig)\n",
+    "ST=np.ones((3,3))\n",
+    "closed=customErosion(binOrig,ST)\n",
+    "DilImage=customDilation(closed,ST)\n",
+    "DilImage=customDilation(DilImage,ST)\n",
+    "DilImage = DilImage.astype(np.uint8)\n",
+    "showBinaryImg(DilImage)\n",
+    "cv2.imwrite('result.png', result)"
+   ]
   },
   {
    "cell_type": "code",
