add morphological operators before and after staffRemoval

--- a/StaffRemoval/staffRemovalWindow.ipynb
+++ b/StaffRemoval/staffRemovalWindow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,19 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(300,) (300, 550)\n"
+      "(277,) (277, 682)\n"
      ]
     }
    ],
    "source": [
-    "img= cv2.imread(\"handBin.png\",0) \n",
+    "img= cv2.imread(\"note.png\",0) \n",
     "\n",
     "# cv2.imwrite(\"test.jpg\",img)\n",
     "# print(img[:,1])\n",
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "251 550\n[[0. 0. 0. ... 1. 1. 1.]\n [0. 0. 1. ... 1. 1. 1.]\n [0. 1. 1. ... 1. 1. 1.]\n ...\n [0. 0. 0. ... 1. 1. 1.]\n [0. 0. 0. ... 1. 1. 1.]\n [0. 0. 0. ... 1. 1. 1.]]\n77 80\n78.5\n83 85\n84.0\n88 91\n89.5\n94 97\n95.5\n99 102\n100.5\n140 142\n141.0\n145 148\n146.5\n151 153\n152.0\n156 159\n157.5\n161 164\n162.5\n199 201\n200.0\n204 207\n205.5\n210 212\n211.0\n215 218\n216.5\n220 223\n221.5\n257 260\n258.5\n263 266\n264.5\n269 271\n270.0\n274 277\n275.5\n279 282\n280.5\n[3 2 3 3 3 2 3 2 3 3 2 3 2 3 3 3 3 2 3 3] [ 78  84  89  95 100 141 146 152 157 162 200 205 211 216 221 258 264 270\n 275 280]\n"
+      "173 682\n[[1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n ...\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]]\n15 17\n16.0\n22 24\n23.0\n30 32\n31.0\n38 40\n39.0\n45 48\n46.5\n82 84\n83.0\n90 92\n91.0\n98 100\n99.0\n105 108\n106.5\n113 115\n114.0\n150 152\n151.0\n158 160\n159.0\n166 168\n167.0\n174 176\n175.0\n181 183\n182.0\n218 220\n219.0\n226 228\n227.0\n234 236\n235.0\n241 243\n242.0\n249 251\n250.0\n[2 2 2 2 3 2 2 2 3 2 2 2 2 2 2 2 2 2 2 2] [ 16  23  31  39  46  83  91  99 106 114 151 159 167 175 182 219 227 235\n 242 250]\n"
      ]
     }
    ],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 54,
    "metadata": {
     "tags": []
    },
@@ -155,7 +155,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 167
+     "execution_count": 54
     }
    ],
    "source": [
@@ -175,12 +175,15 @@
     "# imgCopy=np.copy(img)\n",
     "# cv2.imwrite(\"imgCopy.png\",img*255)\n",
     "img2=1-img2\n",
+    "ST=np.ones((1,3))\n",
+    "img2=cv2.dilate(img2,ST)\n",
+    "\n",
     "for i in range(len(peaksMids)):\n",
     "    img2=removeStaffRow(img2,peaksMids[i],width[i])\n",
     "\n",
-    "# img2=1-img2\n",
-    "ST=np.ones((8,2))\n",
+    "ST=np.ones((2,1))\n",
     "img2=cv2.dilate(img2,ST)\n",
+    "img2=1-img2\n",
     "cv2.imwrite(\"outing.png\",img2*255)\n",
     "    "
    ]
