--- a/StaffRemoval/staffRemovalWindow.ipynb
+++ b/StaffRemoval/staffRemovalWindow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,19 @@
     "from skimage.morphology import binary_erosion, binary_dilation, binary_closing,skeletonize, thin\n",
     "from scipy.signal import convolve2d\n",
     "from statistics import mode \n",
-    "from math import sqrt"
+    "from math import sqrt\n",
+    "from skimage.measure import find_contours\n",
+    "import matplotlib.pyplot as plt \n",
+    "from skimage import data, color, img_as_ubyte \n",
+    "from skimage.feature import canny \n",
+    "from skimage.transform import hough_ellipse \n",
+    "from skimage.draw import ellipse_perimeter \n",
+    "from skimage.draw import rectangle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 296,
    "metadata": {
     "tags": []
    },
@@ -155,7 +162,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 296
     }
    ],
    "source": [
@@ -168,12 +175,6 @@
     "            imgOriginal[midPoint-curWidth:midPoint+curWidth,i:i+1]=0\n",
     "    return imgOriginal\n",
     "\n",
-    "\n",
-    "# img= cv2.imread(\"note.png\",0) \n",
-    "# img=img/255\n",
-    "# img=img.astype('uint8')\n",
-    "# imgCopy=np.copy(img)\n",
-    "# cv2.imwrite(\"imgCopy.png\",img*255)\n",
     "img2=1-img2\n",
     "ST=np.ones((1,3))\n",
     "img2=cv2.dilate(img2,ST)\n",
@@ -184,13 +185,127 @@
     "ST=np.ones((2,1))\n",
     "img2=cv2.dilate(img2,ST)\n",
     "img2=1-img2\n",
-    "cv2.imwrite(\"outing.png\",img2*255)\n",
-    "    "
+    "cv2.imwrite(\"outing.png\",img2*255)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detectStaffOrient(img,Xmin,Xmax,Ymin,Ymax,index):\n",
+    "    countStaff=0\n",
+    "    #imgSymbol=img[int(Ymin):int(Ymax+1),int(Xmin):int(Xmax+1)]\n",
+    "    # print(imgSymbol)\n",
+    "    img_rgb = cv2.imread(\"try.png\",1)  \n",
+    "    # It is need to be convert it to grayscale   \n",
+    "    img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_BGR2GRAY)   \n",
+    "    template = cv2.imread(\"template.png\",0) \n",
+    "    width,height=template.shape\n",
+    "    match = cv2.matchTemplate(img_gray, template, cv2.TM_CCOEFF_NORMED)\n",
+    "    threshold = 0.8\n",
+    "    position = np.where(match >= threshold)\n",
+    "    print(match.shape,img_rgb.shape)\n",
+    "    print(position)\n",
+    "    # x1=position[0][0]\n",
+    "    # y1=position[0][1]]\n",
+    "    # img_rgb[y1][x1]=[155,34,0]]\n",
+    "    for point in zip(*position[::-1]): #draw the rectangle around the matched template\n",
+    "        cv2.rectangle(img_rgb, point, (point[0] + width, point[1] + height), (153, 22, 0), 0)\n",
+    "    \n",
+    "    cv2.imwrite(\"circleDetected.png\",img_rgb)\n",
+    "    for i in peaksMids:\n",
+    "        if(i<=Ymax and i >= Ymin):\n",
+    "            countStaff+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "50\n(24, 1) (33, 13, 3)\n(array([22, 23]), array([0, 0]))\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 298
+    }
+   ],
+   "source": [
+    "contours = find_contours(img2, 0.8)\n",
+    "index=0\n",
+    "for contour in contours:\n",
+    "    x = contour[:,1]\n",
+    "    y = contour[:,0]\n",
+    "    [Xmin, Xmax, Ymin, Ymax] = [np.amin(x), np.amax(x), np.amin(y), np.amax(y)]\n",
+    "    if(index==50):\n",
+    "       # print(index)\n",
+    "        rr, cc = rectangle(start = (Ymin,Xmin), end = (Ymax,Xmax), shape=img.shape)\n",
+    "        imgSymbol=img2[int(Ymin):int(Ymax+1),int(Xmin):int(Xmax+1)]\n",
+    "        cv2.imwrite(\"try.png\",imgSymbol*255)\n",
+    "        #img2[rr.astype(int), cc.astype(int)] = 0\n",
+    "        #imgSymbol=img2[int(Ymin+(0.7*distY)):int(Ymax)+1,int(Xmin):int(Xmax)+1]\n",
+    "        #cv2.imwrite(\"template.png\",imgSymbol*255)\n",
+    "        detectStaffOrient(img2,int(Xmin),int(Xmax), int(Ymin),int(Ymax),index)\n",
+    "        # distY=Ymax-Ymin\n",
+    "        # distX=Xmax-Xmin\n",
+    "\n",
+    "    index+=1\n",
+    "\n",
+    "\n",
+    "cv2.imwrite(\"rects.png\",img2*255)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Load picture, convert to grayscale and detect edges \n",
+    "\n",
+    "#another function\n",
+    "\n",
+    "\n",
+    "# image_rgb = data.coffee()[0:220, 160:420] \n",
+    "# image_gray = color.rgb2gray(imgSymbol) \n",
+    "# edges = canny(image_gray, sigma=2.0, low_threshold=0.55, high_threshold=0.8) \n",
+    "# cv2.imwrite(\"e.png\",edges*255)\n",
+    "# result = hough_ellipse(edges, accuracy=20, threshold=250, min_size=100, max_size=120) \n",
+    "# if(len(result)):\n",
+    "#     print(\"P\")\n",
+    "#     result.sort(order='accumulator') \n",
+    "#     best = list(result[-1]) \n",
+    "#     yc, xc, a, b = [int(round(x)) for x in best[1:5]] \n",
+    "#     orientation = best[5]\n",
+    "#     cy, cx = ellipse_perimeter(yc, xc, a, b, orientation) \n",
+    "#     image_rgb[cy, cx] = (0, 0, 255) \n",
+    "#     edges = color.gray2rgb(img_as_ubyte(edges)) \n",
+    "#     edges[cy, cx] = (250, 0, 0)\n",
+    "#     fig2, (ax1, ax2) = plt.subplots(ncols=2, nrows=1, figsize=(8, 4), sharex=True, sharey=True, subplot_kw={'adjustable':'box-forced'}) \n",
+    "#     ax1.set_title('Original picture') \n",
+    "#     ax1.imshow(image_rgb) \n",
+    "#     ax2.set_title('Edge (white) and result (red)') \n",
+    "#     ax2.imshow(edges) \n",
+    "#     plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": []
