--- a/StaffRemoval/staffRemovalWindow.ipynb
+++ b/StaffRemoval/staffRemovalWindow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(277,) (277, 682)\n"
      ]
@@ -100,14 +100,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "173 682\n[[1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n ...\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]\n [1. 1. 1. ... 1. 1. 1.]]\n15 17\n16.0\n22 24\n23.0\n30 32\n31.0\n38 40\n39.0\n45 48\n46.5\n82 84\n83.0\n90 92\n91.0\n98 100\n99.0\n105 108\n106.5\n113 115\n114.0\n150 152\n151.0\n158 160\n159.0\n166 168\n167.0\n174 176\n175.0\n181 183\n182.0\n218 220\n219.0\n226 228\n227.0\n234 236\n235.0\n241 243\n242.0\n249 251\n250.0\n[2 2 2 2 3 2 2 2 3 2 2 2 2 2 2 2 2 2 2 2] [ 16  23  31  39  46  83  91  99 106 114 151 159 167 175 182 219 227 235\n 242 250]\n"
+      "173 682\n",
+      "[[1. 1. 1. ... 1. 1. 1.]\n",
+      " [1. 1. 1. ... 1. 1. 1.]\n",
+      " [1. 1. 1. ... 1. 1. 1.]\n",
+      " ...\n",
+      " [1. 1. 1. ... 1. 1. 1.]\n",
+      " [1. 1. 1. ... 1. 1. 1.]\n",
+      " [1. 1. 1. ... 1. 1. 1.]]\n",
+      "15 17\n",
+      "16.0\n",
+      "22 24\n",
+      "23.0\n",
+      "30 32\n",
+      "31.0\n",
+      "38 40\n",
+      "39.0\n",
+      "45 48\n",
+      "46.5\n",
+      "82 84\n",
+      "83.0\n",
+      "90 92\n",
+      "91.0\n",
+      "98 100\n",
+      "99.0\n",
+      "105 108\n",
+      "106.5\n",
+      "113 115\n",
+      "114.0\n",
+      "150 152\n",
+      "151.0\n",
+      "158 160\n",
+      "159.0\n",
+      "166 168\n",
+      "167.0\n",
+      "174 176\n",
+      "175.0\n",
+      "181 183\n",
+      "182.0\n",
+      "218 220\n",
+      "219.0\n",
+      "226 228\n",
+      "227.0\n",
+      "234 236\n",
+      "235.0\n",
+      "241 243\n",
+      "242.0\n",
+      "249 251\n",
+      "250.0\n",
+      "[2 2 2 2 3 2 2 2 3 2 2 2 2 2 2 2 2 2 2 2] [ 16  23  31  39  46  83  91  99 106 114 151 159 167 175 182 219 227 235\n",
+      " 242 250]\n"
      ]
     }
    ],
@@ -142,20 +191,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 54
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -190,10 +239,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "img=cv2.imread('note.png')\n",
+    "img2=img2*255\n",
+    "img2=img2.astype('uint8')\n",
+    "count, labels, stats, centroids = cv2.connectedComponentsWithStats(img2)\n",
+    "for i in range(1,count):\n",
+    "    t2 = cv2.circle(img2, (int(centroids[i,0]), int(centroids[i,1])), 5, (0, 255, 0, 0), 5)\n",
+    "\n",
+    "cv2.imshow('circles', img2)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.imshow('centers', t2)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
