--- a/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
+++ b/ContrastEnhancementTrails/Integrated/PreProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,14 @@
     "from pylab import imshow, gray, show \n",
     "import cv2\n",
     "from math import pi\n",
-    "from scipy.ndimage import interpolation as inter"
+    "from scipy.ndimage import interpolation as inter\n",
+    "from statistics import mode,variance\n",
+    "from skimage.filters import threshold_otsu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,75 +270,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#prespecive correction\n",
+    "def prespectiveCorrection(RotatedImage):\n",
+    "    #rotated image is the image returned from the deskew directly\n",
+    "    RotatedImage = RotatedImage*255\n",
+    "    rows,cols = RotatedImage.shape\n",
+    "    edges = cv2.Canny(RotatedImage,50,150,apertureSize = 3)\n",
+    "    \n",
+    "    maxLineGap = 10\n",
+    "    minLineLength = 60\n",
+    "    prespectiveSlopeThreshold = 0.05\n",
+    "    flag=False\n",
+    "    \n",
+    "    \n",
+    "    lines = cv2.HoughLinesP(edges,1,np.pi/180,15,minLineLength=minLineLength,maxLineGap=maxLineGap)\n",
+    "    binary = np.zeros((rows,cols)).astype('uint8')\n",
+    "    \n",
+    "    s = 0\n",
+    "    countLines = 0\n",
+    "    countOfVerticalAndhorizontalLines = 0\n",
+    "    for x in range(0, len(lines)):\n",
+    "        for x1,y1,x2,y2 in lines[x]:\n",
+    "            cv2.line(binary,(x1,y1),(x2,y2),255,2)\n",
+    "            m = ((y2-y1)/(x2-x1))\n",
+    "            if(abs(m)==np.inf or m==0):\n",
+    "                countOfVerticalAndhorizontalLines+=1\n",
+    "            if(abs(m) != np.inf):\n",
+    "                countLines+=1\n",
+    "                s+=m\n",
+    "                \n",
+    "    avrgSlope = s/countLines \n",
+    "    percentage = (countOfVerticalAndhorizontalLines/len(lines))*100\n",
+    "              \n",
+    "\n",
+    "    if(abs(avrgSlope)>prespectiveSlopeThreshold and percentage<80):\n",
+    "        \n",
+    "        SE = np.ones([50,50])      \n",
+    "        closedImage = cv2.morphologyEx(binary, cv2.MORPH_CLOSE, SE)\n",
+    "        \n",
+    "    \n",
+    "        contours, hierarchy = cv2.findContours(closedImage,  cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_NONE) \n",
+    "        cnts = sorted(contours, key = cv2.contourArea, reverse = True)[:5]\n",
+    "    \n",
+    "        \n",
+    "        for box in cnts:\n",
+    "            epsilon = 0.02*cv2.arcLength(box,True)\n",
+    "            approx = cv2.approxPolyDP(box,epsilon,True) \n",
+    "            for i in range(0,len(approx)):\n",
+    "                RotatedImage = cv2.circle(RotatedImage, (approx[i,0,0],approx[i,0,1]), 2, 200, 2)\n",
+    "            if(len(approx)==4):\n",
+    "                flag=True\n",
+    "                points=approx\n",
+    "                break\n",
+    "            \n",
+    "        if flag==True:\n",
+    "            \n",
+    "            margin = 20\n",
+    "            \n",
+    "            points[0,0,0]+=margin\n",
+    "            points[0,0,1]-=margin\n",
+    "            points[1]-=margin\n",
+    "            points[2,0,0]-=margin\n",
+    "            points[2,0,1]+=margin\n",
+    "            points[3]+=margin\n",
+    "            \n",
+    "            \n",
+    "            cv2.drawContours(RotatedImage, [points], -1, (0, 255, 0), 2)\n",
+    "            \n",
+    "            rect = np.zeros((4, 2), dtype = \"float32\")\n",
+    "            s1 = points.sum(axis = 1)\n",
+    "            s = s1.sum(axis=1)\n",
+    "            \n",
+    "            \n",
+    "            rect[0] = s1[np.argmin(s)]\n",
+    "            rect[2] = s1[np.argmax(s)]\n",
+    "            diff = np.diff(s1, axis = 1)\n",
+    "            rect[1] = s1[np.argmin(diff)]\n",
+    "            rect[3] = s1[np.argmax(diff)]\n",
+    "            \n",
+    "            (tl, tr, br, bl) = rect\n",
+    "            widthA = np.sqrt(((br[0] - bl[0]) ** 2) + ((br[1] - bl[1]) ** 2))\n",
+    "            widthB = np.sqrt(((tr[0] - tl[0]) ** 2) + ((tr[1] - tl[1]) ** 2))\n",
+    "            maxWidth = max(int(widthA), int(widthB))\n",
+    "            heightA = np.sqrt(((tr[0] - br[0]) ** 2) + ((tr[1] - br[1]) ** 2))\n",
+    "            heightB = np.sqrt(((tl[0] - bl[0]) ** 2) + ((tl[1] - bl[1]) ** 2))\n",
+    "            maxHeight = max(int(heightA), int(heightB))\n",
+    "            \n",
+    "            dst = np.array([\n",
+    "            \t\t[0, 0],\n",
+    "            \t\t[maxWidth - 1, 0],\n",
+    "            \t\t[maxWidth - 1, maxHeight - 1],\n",
+    "            \t\t[0, maxHeight - 1]], dtype = \"float32\")\n",
+    "                \n",
+    "        \n",
+    "            M = cv2.getPerspectiveTransform(rect, dst)\n",
+    "            warped = cv2.warpPerspective(RotatedImage, M, (maxWidth, maxHeight)) \n",
+    "            \n",
+    "        else:warped = RotatedImage\n",
+    "            \n",
+    "    else:\n",
+    "        warped = RotatedImage\n",
+    "        \n",
+    "    return warped"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 88,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
-    "img= cv2.imread(\"16.jpg\") \n",
+    "img= cv2.imread(\"09.PNG\") \n",
     "countourImg=np.copy(img)\n",
     "gray_img=cv2.cvtColor(img,cv2.COLOR_BGR2GRAY) \n",
     "IlluminatedImage=applyPoison(gray_img,0.1,0.1)\n",
     "IlluminatedImage=IlluminatedImage.astype(np.uint8)\n",
     "smoothedImage=smooth(IlluminatedImage)\n",
-    "cv2.imwrite(\"IllumImage.png\",IlluminatedImage)\n",
-    "showImg(smoothedImage)\n",
-    "BinarizedImage=feng_threshold(smoothedImage)\n",
+    "t =threshold_otsu(smoothedImage)\n",
+    "BinarizedImage=np.where(smoothedImage>t,1,0)\n",
+    "# BinarizedImage=feng_threshold(IlluminatedImage)\n",
     "BinarizedImage=1-BinarizedImage\n",
     "RotatedImage=deskew(BinarizedImage)\n",
+    "#correctedPrespective=prespectiveCorrection(RotatedImage)\n",
     "BinarizedImage=1-RotatedImage\n",
-    "showBinaryImg(BinarizedImage)\n",
     "cv2.imwrite(\"Binarized.png\",BinarizedImage*255)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#divide binarized image into segments\n",
+    "#get Horizontal Projection \n",
+    "imgCopy= np.copy(BinarizedImage)\n",
+    "img=imgCopy\n",
+    "img=1-img\n",
+    "def rowProjection(img):\n",
+    "    proj = np.sum(img,1)\n",
+    "    maxProjection = np.max(proj) \n",
+    "    result = np.zeros(img.shape) \n",
+    "    width=img.shape[1] \n",
+    "    # Draw a line for each row \n",
+    "    for row in range(img.shape[0]):\n",
+    "        result[row,0:int(proj[row])]=1  \n",
+    "    result=1-result\n",
+    "    return maxProjection,result"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "error",
+     "ename": "IndexError",
+     "evalue": "index 352 is out of bounds for axis 0 with size 352",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-820bd40e3dba>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;31m#estimate max staff space\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     84\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 85\u001b[0;31m \u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrowProjection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     86\u001b[0m \u001b[0mstaffWidth\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpeaksMids\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcalcStaffPos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0mmaxSpace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmaxStaffSpace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpeaksMids\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstaffWidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-10-fb19e3c06468>\u001b[0m in \u001b[0;36mrowProjection\u001b[0;34m(img)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;31m# Draw a line for each row\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mresult\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmaxProjection\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 352 is out of bounds for axis 0 with size 352"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "#estimate staff position \n",
+    "def calcStaffPos(rowHist,maxProjection,thr):\n",
+    "    n,m=rowHist.shape\n",
+    "    thres=int(maxProjection*thr)\n",
+    "    start=end=0\n",
+    "    width=[]\n",
+    "    peaksMid=[]\n",
+    "    for i in range(n-1):\n",
+    "        if(rowHist[i][thres]!=rowHist[i+1][thres]):\n",
+    "            if rowHist[i][thres]==1:\n",
+    "                #end of zeros\n",
+    "                start=i\n",
+    "            else:\n",
+    "                #end of ones\n",
+    "                end=i+1\n",
+    "                peaksMid.append(int((start+end)/2))\n",
+    "                width.append((end-start))\n",
+    "    return np.array(width),np.array(peaksMid)\n",
+    "\n",
+    "#estimate staff segment position \n",
+    "#TODO: try to make segments into blocks with ST\n",
+    "def calcSegmentPos(rowHist):\n",
+    "    n,m=rowHist.shape\n",
+    "    thres=20\n",
+    "    start=end=0\n",
+    "    width=[]\n",
+    "    peaksMid=[]\n",
+    "    for i in range(n-1):\n",
+    "        if(rowHist[i][thres]!=rowHist[i+1][thres]):\n",
+    "            if rowHist[i][thres]==1:\n",
+    "                #end of zeros\n",
+    "                start=i\n",
+    "            else:\n",
+    "                #end of ones\n",
+    "                end=i+1\n",
+    "                peaksMid.append(int((start+end)/2))\n",
+    "                width.append((end-start))\n",
+    "    return np.array(width),np.array(peaksMid)\n",
+    "\n",
+    "def filterPeaks(peaksMids,widths):\n",
+    "    if(len(peaksMids)==1):\n",
+    "        return widths,peaksMids\n",
+    "    newPeaks=[]\n",
+    "    newWidth=[]\n",
+    "    sumW=0\n",
+    "    for i in widths:\n",
+    "        sumW+=i\n",
+    "    avgW=sumW/len(widths)\n",
+    "    #if i dont have flase peaks for clusters then this will result in a problem\n",
+    "    var = variance(widths)\n",
+    "    for i in range(len(peaksMids)):\n",
+    "        if(widths[i]>=avgW or (var<1000 and (avgW-widths[i])<20)):\n",
+    "            newPeaks.append(peaksMids[i])\n",
+    "            newWidth.append(widths[i])\n",
+    "    return newWidth,newPeaks\n",
+    "\n",
+    "#TODO:add validation so Idont get out of bound error\n",
+    "#divide image into segments\n",
+    "def imgStaffSegments(img,segMids,widths,staffS):\n",
+    "    segments=[]\n",
+    "    staffS=int(staffS)\n",
+    "    n,m=img.shape\n",
+    "    for i in range(len(segMids)):\n",
+    "        if(segMids[i]-int(widths[i]/2)-2*staffS < 0):\n",
+    "            segments.append(img[0:segMids[i]+int(widths[i]/2)+2*staffS,:])\n",
+    "        elif(segMids[i]+int(widths[i]/2)+2*staffS>m):\n",
+    "            segments.append(img[segMids[i]-int(widths[i]/2)-2*staffS:m,:])\n",
+    "        else:\n",
+    "            segments.append(img[segMids[i]-int(widths[i]/2)-2*staffS:segMids[i]+int(widths[i]/2)+2*staffS,:])\n",
+    "    return segments\n",
+    "\n",
+    "def maxStaffSpace(peaksMids,width):\n",
+    "    maxSpace=0\n",
+    "    for i in range(len(peaksMids)):\n",
+    "        if(i%5<4 and i+1<len(peaksMids)and peaksMids[i+1]-peaksMids[i]>maxSpace):\n",
+    "            maxSpace=peaksMids[i+1]-peaksMids[i]\n",
+    "            maxSpace=maxSpace-(width[i]/2+width[i+1]/2)\n",
+    "    return maxSpace\n",
+    "\n",
+    "\n",
+    "#divide image into segments\n",
+    "\n",
+    "#estimate max staff space\n",
+    "\n",
+    "maxProjection,result=rowProjection(img)\n",
+    "staffWidth,peaksMids=calcStaffPos(result,maxProjection,0.6)\n",
+    "maxSpace=maxStaffSpace(peaksMids,staffWidth)\n",
+    "\n",
+    "#estimate staff segment position\n",
+    "\n",
+    "segWidth,segMids=calcSegmentPos(result)\n",
+    "#filter peaks\n",
+    "segWidth,segMids=filterPeaks(segMids,segWidth)\n",
+    "\n",
+    "#divide image into segments and divide image => return array of images each image has staff segment\n",
+    "\n",
+    "imgSegments = imgStaffSegments(BinarizedImage,segMids,segWidth,maxSpace)\n",
+    "\n",
+    "imgindex=0\n",
+    "for i in imgSegments:\n",
+    "    cv2.imwrite(\"segments/\"+str(imgindex)+\".png\",i*255)\n",
+    "    imgindex+=1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#loop in array of images and remove staff from each\n",
+    "def removeStaffRow(imgOriginal,midPoint,curWidth):\n",
+    "    thresPixel=curWidth\n",
+    "    for i in range(imgOriginal.shape[1]):\n",
+    "        pixelSum= sum(imgOriginal[midPoint-curWidth:midPoint+curWidth,i:i+1])\n",
+    "        if(pixelSum<=thresPixel):\n",
+    "           # print(imgOriginal[midPoint-curWidth:midPoint+curWidth,i:i+1])\n",
+    "            imgOriginal[midPoint-curWidth:midPoint+curWidth,i:i+1]=0\n",
+    "    return imgOriginal\n",
+    "\n",
+    "#remove staff from array of imgs of segments\n",
+    "imgsStaffRemoved=[]\n",
+    "for simg in imgSegments:\n",
+    "    maxProjection,result=rowProjection(simg)\n",
+    "    staffWidth,peaksMids=calcStaffPos(result,maxProjection,0.85)\n",
+    "    simg=1-simg\n",
+    "    ST=np.ones((1,3))\n",
+    "    simg=cv2.dilate(simg,ST)\n",
+    "    for i in range(len(peaksMids)):\n",
+    "        simg=removeStaffRow(simg,peaksMids[i],staffWidth[i])\n",
+    "    ST=np.ones((2,1))\n",
+    "    simg=cv2.dilate(simg,ST)\n",
+    "    simg=1-simg\n",
+    "    imgsStaffRemoved.append(simg)\n",
+    "\n",
+    "\n",
+    "imgindex=0\n",
+    "for i in imgsStaffRemoved:\n",
+    "    cv2.imwrite(\"staffRemoved/\"+str(imgindex)+\".png\",i*255)\n",
+    "    imgindex+=1\n",
+    "#return array of images without staff"
+   ]
   },
   {
    "cell_type": "code",
@@ -362,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
